@@ -1,5 +1,9 @@
 2010-03-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* loader/i386/bsd.c (grub_bsd_get_device): Fix a memory leak.
+
+2010-03-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* loader/i386/multiboot_mbi.c (grub_multiboot_set_bootdev): Free the
 	right pointer.
 
